[tool.poetry]
name = "random-database-schema"
version = "0.1.0"
description = ""
authors = ["ZHOU Cheng <c.zhou@live.com>"]

[tool.poetry.dependencies]
python = "^3.10"
random-word = "1.0.11"
tqdm = "4.64.1"
clickhouse-driver = "0.2.4"

[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.tencent.com/pypi/simple"
default = true

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
